update image link

--- a/css/custom.css
+++ b/css/custom.css
@@ -13473,7 +13473,7 @@ p {
   display: block;
 }
 #hidden-costs .quiz-intro {
-  background-image: url("https://cdn.jsdelivr.net/gh/othnielvtf/msoft-landing-page@main/assets/Layer 1.png");
+  background-image: url("https://cdn.jsdelivr.net/gh/othnielvtf/msoft-landing-page/assets/Layer-1.png");
   background-size: cover;
   background-position: center;
   border-radius: 4px;
