--- a/css/6d05aff1987ff76a.css
+++ b/css/6d05aff1987ff76a.css
@@ -530,7 +530,8 @@ select:disabled {
 [type=reset],
 [type=submit],
 button {
-	-webkit-appearance: button
+	-webkit-appearance: button;
+	appearance: button;
 }
 
 [type=button]:not(:disabled),
@@ -591,6 +592,7 @@ legend+* {
 
 [type=search] {
 	-webkit-appearance: textfield;
+	appearance: textfield;
 	outline-offset: -2px
 }
 
@@ -609,7 +611,8 @@ legend+* {
 
 ::file-selector-button {
 	font: inherit;
-	-webkit-appearance: button
+	-webkit-appearance: button;
+	appearance: button;
 }
 
 output {
